--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,5 +8,5 @@ COPY target/shopping-cart-0.0.1-SNAPSHOT.jar $APP_HOME/app.jar
 
 WORKDIR $APP_HOME
 
-ENTRYPOINT ["/bin/bash", "java -jar app.jar"]
+ENTRYPOINT ["/bin/sh", "-c", "java -jar app.jar"]
 # ENTRYPOINT exec java -jar app.jar
